--- a/htdocs/dashboard/404.html
+++ b/htdocs/dashboard/404.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="unicode">
 
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -13,13 +13,13 @@
     
     
 
-    <link href="/dashboard/stylesheets/normalize.css" rel="stylesheet" type="text/css" /><link href="/dashboard/stylesheets/all.css" rel="stylesheet" type="text/css" />
-    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <a href="/dashboard/stylesheets/normalize.css" rel="stylesheet" type="text/css" /><link href="/dashboard/stylesheets/all.css" rel="stylesheet" type="text/css" />
+    <a href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
     <script src="/dashboard/javascripts/modernizr.js" type="text/javascript"></script>
 
 
-    <link href="/dashboard/images/favicon.png" rel="icon" type="image/png" />
+    <a href="/dashboard/images/favicon.png" rel="icon" type="image/png" />
 
 
   </head>
@@ -115,7 +115,7 @@
     </footer>
 
     <!-- JS Libraries -->
-    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="/dashboard/javascripts/all.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="/dashboard/javascripts/all.js" type=application/javascript"></script>
   </body>
 </html>
